--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,6 @@
     </div>
   </div>
 
-
   <div id="articleTemplate" style="display: none;">
     <div class="row-lg-12">
       <div class="panel panel-default panel-article">
@@ -65,6 +64,12 @@
           <strong>Description</strong>: <span class="article-description"></span><br/>
           <strong>Price (ETH)</strong>: <span class="article-price"></span><br/>
           <strong>Sold by</strong>: <span class="article-seller"></span><br/>
+        </div>
+
+        <div class="panel-footer">
+          <button type="button" class="btn btn-primary btn-success btn-buy" onclick="App.buyArticle(); return false;">
+            Buy
+          </button>
         </div>
       </div>
     </div>
